# tfg

./: .gitignore  configuracion copy.py  configuracion.py  requirements.txt
proyecto_flet/: build_apk.ps1  debug_android.ps1  firebase.txt  pyproject.toml
proyecto_flet/src/: gps_firebase.py  main.py  router.py
proyecto_flet/src/components/: campos_texto.py  card_password.py  componentes.py  components.py  enlaces.py  titulos.py
proyecto_flet/src/controllers/: ajustes_controller.py  auth_controller.py  group_controller.py  mapa_controller.py  settings_controller.py  user_controller.py  usuario_controller.py
proyecto_flet/src/database/: config.py  wrapper.py
proyecto_flet/src/db/: config.py
proyecto_flet/src/services/: ajustes_service.py  auth_service.py  gps_firebase.py  gps_service.py  grupo_service.py  usuario_service.py  wrapper.py
proyecto_flet/src/views/: ajustes.py  ajustes_view.py  groups.py  groups_view.py  home_prueba.py  login.py  login_view.py  mapa.py  mapa_view.py  perfil.py  perfil_view.py  pricipal.py  principal_view.py  registro.py  registro_view.py
ubika/: README.md  build_apk.ps1  build_windows.ps1  debug_android.ps1  firebase.txt  pyproject.toml  reemplazar_draw.py  reglas.txt  requirements.txt
ubika/src/: main.py  router.py
ubika/src/components/: boton_acciones.py  boton_agregar.py  boton_editar.py  boton_eliminar.py  boton_link.py  boton_principal.py  card_password.py  components.py  delete_button.py  edit_button.py  input_texto.py  plus_button.py  tarjeta_crear_grupo.py  tarjeta_grupos.py  tarjeta_psw.py  titulos.py
ubika/src/controllers/: ajustes_controller.py  auth_controller.py  group_controller.py  grupos_controller.py  (+3 more)
(+73 files in other folders)
